# pylogit

./: .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: test_package.yml
documents/: pylogit_computation.tex
examples/: Main PyLogit Example.ipynb  Python Biogeme Benchmark--01Logit.ipynb  mlogit Benchmark--Train and Fishing.ipynb  mlogit_Benchmark--Heating.ipynb
examples/.ipynb_checkpoints/: Main PyLogit Example-checkpoint.ipynb  Python Biogeme Benchmark--01Logit-checkpoint.ipynb  mlogit Benchmark--Train and Fishing-checkpoint.ipynb  mlogit_Benchmark--Heating-checkpoint.ipynb
examples/data/: electricity_r_data_long.csv  fishing_data_r.csv  long_swiss_metro_data.csv
examples/notebooks/: Asymmetric Choice Models Example.ipynb  Main PyLogit Example.ipynb  Nested Logit Example--Python Biogeme benchmark--09NestedLogit.ipynb  Prediction with PyLogit.ipynb  Python Biogeme Benchmark--01Logit.ipynb  mlogit Benchmark--Train and Fishing.ipynb  mlogit_Benchmark--Heating.ipynb
examples/notebooks/.ipynb_checkpoints/: Asymmetric Choice Models Example-checkpoint.ipynb  Nested Logit Example--Python Biogeme benchmark--09NestedLogit-checkpoint.ipynb
examples/point estimation example/: Small working example.ipynb
pylogit/: __init__.py  asym_logit.py  base_multinomial_cm_v2.py  bootstrap.py  bootstrap_abc.py  bootstrap_calcs.py  bootstrap_controller.py  bootstrap_mle.py  bootstrap_sampler.py  bootstrap_utils.py  choice_calcs.py  choice_model_em.py  choice_tools.py  clog_log.py  conditional_logit.py  construct_estimator.py  display_names.py  estimation.py  mixed_logit.py  mixed_logit_calcs.py  nested_choice_calcs.py  nested_logit.py  pylogit.py  scobit.py  uneven_logit.py
src/pylogit/: __init__.py  base_multinomial_cm_v2.py  bootstrap.py  bootstrap_calcs.py  bootstrap_mle.py  bootstrap_sampler.py  choice_calcs.py  choice_tools.py  conditional_logit.py  construct_estimator.py  display_names.py  mixed_logit.py  mixed_logit_calcs.py  nested_choice_calcs.py  nested_logit.py  scipy_utils.py
src/pylogit/newsfragments/: 18.trivial  27.fixed  28.doc  29.fixed  30.trivial  33.fixed  35.trivial  46.trivial  58.trivial  59.trivial  60.trivial  61.trivial  63.trivial  64.trivial  65.trivial  66.trivial  68.trivial  72.trivial
tests/: test_asym_logit.py  test_base_cm_predict.py  test_base_multinomial_cm.py  test_bootstrap_abc.py  test_bootstrap_calcs.py  test_bootstrap_controller.py  test_bootstrap_mle.py  test_bootstrap_sampler.py  test_bootstrap_utils.py  test_choice_calcs.py  test_choice_tools.py  test_clog_log.py  test_conditional_logit.py  test_construct_estimator.py  test_estimation.py  test_mixed_logit.py  test_nested_choice_calcs.py  test_nested_logit.py  test_pylogit.py  test_scipy_utils.py  test_scobit.py  test_uneven_logit.py
