[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pylogit"
author = "Timothy Brathwaite"
author-email = "timothyb0912@gmail.com"
repository = "https://github.com/timothyb0912/pylogit"
description = "Maximum likelihood estimation of conditional logit models"
description-file = "README.rst"
requires = [
    "pandas >= 0.16.2",
    "numpy >= 1.10.2",
    "scipy >= 0.16.1",
    "future >= 0.16",
    "statsmodels >= 0.6.1",
    "tqdm >= 4.15.0",
]
requires-python = ">=3.6"
keywords = "conditional logit,discrete choice,econometrics,choice models"
license = "BSD-3-Clause"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
]
